--- a/trip.html
+++ b/trip.html
@@ -194,7 +194,7 @@
 
 
 
-<script src="search2.js"></script>
+<script src="search.js"></script>
 <script type="text/javascript">
   window.addEventListener("scroll", function(){
     var header = document.querySelector("header");
