--- a/about.html
+++ b/about.html
@@ -15,12 +15,12 @@
 <header>
   <a href="#" class="logo">Yatra</a>
   <ul class="link">
-      <li><a href="Home.html">Home</a></li>
-      <li><a href="trip.html">Trip</a></li>
+      <li><a href="Home.php">Home</a></li>
+      <li><a href="trip.php">Trip</a></li>
       <!-- <li><a href="#">Blogs</a></li> -->
       <li><a href="gallery.html">Gallery</a></li>
       <li><a href="#">About us</a></li>
-      <li><a href="login.php">Sign In</a></li>
+      <li><a href="logggin.php">Sign In</a></li>
   </ul>
 </header>
 <section class="banner"></section>
