--- a/gallery.html
+++ b/gallery.html
@@ -14,8 +14,8 @@
 <header>
   <a href="#" class="logo">Yatra</a>
   <ul class="link">
-      <li><a href="Home.html">Home</a></li>
-      <li><a href="trip.html">Trip</a></li>
+      <li><a href="Home.php">Home</a></li>
+      <li><a href="trip.php">Trip</a></li>
       <!-- <li><a href="#">Blogs</a></li> -->
       <li><a href="#">Gallery</a></li>
       <li><a href="about.html">About us</a></li>
