--- a/pokhara.html
+++ b/pokhara.html
@@ -15,8 +15,8 @@
 <header>
   <a href="#" class="logo">Yatra</a>
   <ul class="link">
-      <li><a href="Home.html">Home</a></li>
-      <li><a href="trip.html">Trip</a></li>
+      <li><a href="Home.php">Home</a></li>
+      <li><a href="trip.php">Trip</a></li>
       <!-- <li><a href="#">Blogs</a></li> -->
       <li><a href="gallery.html">Gallery</a></li>
       <li><a href="about.html">About us</a></li>
@@ -56,7 +56,7 @@
       <img src="images/pokhara2.jpg" alt="Image" class="img-fluid">
       </div>
       <div class="listing-item-content">
-      <a class="traveling-fee" href="kathmandu.html">Rs 500.00</a>
+      <a class="traveling-fee" href="form.php">Rs 500.00</a>
       <h2 class="place-name"><a href="#">Pokhara</a></h2>
       <h2 class="info-shyambhu">Information</h2>
       <p id="about-shyambhu">Pokhara is well-known as the starting point for numerous trekking trails and expeditions<br>in the Annapurna. Most trekkers heading for the Annapurna region make Pokhara thei<br> first stop, or as a relaxing station before heading out for some serious hiking. So, one may<br>enjoy boating and reading books, observing the serenity of  nature, sipping on your favourite<br>drink, either in local restaurants or at a blues bar, or one may simply enjoy sightseeing or cycling<br>around the valley.</p>
